2002-04-23  Jeff Freedman  <jeff@amy.nerble.net>

	* usecode/ucsched.cc (Usecode_script): Whoops!  Next_frame_max
	wasn't stopping at the right number.

	* actors.cc: Allow anything to go in 'back' spot.

	* gamedat.cc,gamewin.cc,game.cc:  get_game_identity() moved into
	Game_window class, handles compressed savegames, and is used to
	check IDENTITY before doing a restore.

2002-04-23  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* configure.in: applied patch by Kevin Lacquement to fix some
	header detection problems in configure

2002-04-21  Jeff Freedman  <jeff@amy.nerble.net>

	* schedule.cc,actions.cc:  notify_object_gone() method tells
	schedule that one of its objects is no longer around.
	* schedule.cc (Sleep_schedule): Make sure NPC is still by bed when
	waking up.

2002-04-18  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* game.cc, exult.cc: fixed setting the PATCH directory

2002-04-16  Ryan Nunn  <triforce@merlin.net.au>
	* game.cc : Don't pass trailing slashes in calls to get_system_path
	  when setting up static, gamedat, savegame and patch paths.
	* files/utils.cc : Fixing get_system_path so it doesn't search for a
	  slash. It now searches for the < and > around the path name.

2002-04-15  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* *game.cc: made output for is_installed slightly more useful
	* *game.cc, files/utils.*: patch by Paul Hebble:
	changed BG/SI_Game::is_installed not to require a path anymore

2002-04-15  Max Horn  <max@quendi.de>
	* docs/xml/*: Makeover of the XML doc system.

2002-04-14  Ryan Nunn  <triforce@merlin.net.au>
	* exult.cc : Fixed a path problem
	* palette.cc : std namespace stuff
	* game.cc : DON'T write the savegame config setting by default at the 
	  moment. Though really the damage this may do, has already been done.
	* files/utils.cc : Changed things so get_system_path() will attemp to
	  convert long filenames in Windows to short filenames. This is an